# client.core/src/main/resources/api.yaml
@@ -16,6 +16,10 @@ tags:
     description: User resource
   - name: car
     description: Car resource
+security:
+  - oAuth:
+      - write
+      - read
 paths:
   /user:
     get:
@@ -317,3 +321,13 @@ components:
             - ACTIVE
             - DELETED
           description: status of the car
+  securitySchemes:
+    oAuth:
+      type: oauth2
+      description: This API uses OAuth2 with the password flow
+      flows:
+        password:
+          tokenUrl: /oauth/token
+          scopes:
+            read: get information from the API
+            write: use the API to make changes to the supporting data model
