# controller/src/main/java/ro/agilehub/javacourse/car/hire/rental/controller/RentalController.java
@@ -3,7 +3,6 @@ package ro.agilehub.javacourse.car.hire.rental.controller;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.RestController;
 
 import ro.agilehub.javacourse.car.hire.rental.api.model.RentalDTO;
@@ -14,7 +13,6 @@ import ro.agilehub.javacourse.car.hire.rental.service.RentalService;
 import javax.validation.Valid;
 
 @RestController
-@PreAuthorize("hasAuthority('MANAGER')")
 @RequiredArgsConstructor
 public class RentalController implements RentalApi {
 
